--- a/src/app/password-list/password-list.component.html
+++ b/src/app/password-list/password-list.component.html
@@ -1,1 +1,16 @@
-<p>password-list works!</p>
+<div class="container mx-auto my-16">
+    <div class="grid grid-cols-2 gap-5">
+        <div class="shadow-lg border-2 border-gray-900">
+            <img src="" alt="">
+            <h3 class="text-xl font-bold p-3"></h3>
+
+            <div class="grid grid-cols-3 gap-3 my-1 p-3">
+                <div class="col-span-2 bg-blue-200 text-blue-800 rounded-lg text-sm">
+                    https://goddady.com
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
