--- a/src/app/password-list/password-list.component.html
+++ b/src/app/password-list/password-list.component.html
@@ -1,16 +1,77 @@
 <div class="container mx-auto my-16">
-    <div class="grid grid-cols-2 gap-5">
-        <div class="shadow-lg border-2 border-gray-900">
-            <img src="" alt="">
-            <h3 class="text-xl font-bold p-3"></h3>
+    <div *ngIf="isMsgShow" class="p-5 my-3 bg-teal-100 text-teal-900">
+        {{msgContent}}
 
+    </div>
+    
+    <div class="grid grid-cols-2 gap-5">
+
+        
+        
+        <div class="shadow-lg border-2 border-gray-900">
+            <img src="https://cdn.mos.cms.futurecdn.net/dcHyDicd7tuDEJX75NDoqV.jpeg" alt="">
+            <h3 class="text-xl font-bold p-3">GoDaddy.com</h3>
+            
             <div class="grid grid-cols-3 gap-3 my-1 p-3">
                 <div class="col-span-2 bg-blue-200 text-blue-800 rounded-lg text-sm">
                     https://goddady.com
                 </div>
             </div>
-
         </div>
+        <div class="px-20 py-10 mb-10 my-5 border-4 border-gray-900">
+            <h2 class="text-3xl text-center">{{titleMsg}} User & Password</h2>
+            <p class="text-center">You can {{titleMsg}} user & Password from the below form</p>
+
+            <form #f="ngForm" (ngSubmit)="onSubmit(f.value)">
+                <div class="flex flex-col">
+                    <label class="text-lg font-medium mb-2" for="em">Email</label>
+                    <input [(ngModel)]="uemail" class="border-2 border-gray-900 p-2 rounded-lg w-full" type="email" name="email">
+                </div>
+                <div class="flex flex-col">
+                    <label class="text-lg font-medium mb-2" for="un">Username</label>
+                    <input [(ngModel)]="uname" class="border-2 border-gray-900 p-2 rounded-lg w-full" type="text" name="username">
+                </div>
+                <div class="flex flex-col">
+                    <label class="text-lg font-medium mb-2" for="pass">Password</label>
+                    <input [(ngModel)]="upassword" class="border-2 border-gray-900 p-2 rounded-lg w-full" type="password" name="password">
+                </div>
+                    
+                <button class="mt-10 mx-0.5 px-5 py-3 text-sm bg-gray-900 text-white shadow rounded-md">
+                    {{titleMsg}} Password
+                </button>
+            </form>
+
+        </div> 
+
+    </div>
+
+    <div class="grid grid-cols-1 mt-10">
+        <table class="border-2 border-gray-900">
+            <thead>
+                <tr class="bg-gray-200 p-52 h-14 text-left">
+                    <th class="border-2 border-gray-900 p-3">Email</th>
+                    <th class="border-2 border-gray-900 p-3">Username</th>
+                    <th class="border-2 border-gray-900 p-3">Password</th>
+                    <th class="border-2 border-gray-900 p-3">Action</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr class="h-14" *ngFor="let pass of allPasswords | async" >
+                    <td class="border-2 border-gray-900 p-3">{{pass.email}}</td>
+                    <td class="border-2 border-gray-900 p-3">{{pass.username}}</td>
+                    <td class="border-2 border-gray-900 p-3">{{pass.password}}</td>
+                    <td class="border-2 border-gray-900 p-3">
+                        <button (click)="editPasswordFild(pass.email,pass.username,pass.password,pass.id)" class="mx-0.5 px-5 py-3 text-sm bg-gray-900 text-white shadow rounded-md">
+                            Edit
+                        </button>
+                        <button (click)="deletePass(pass.id)"class="mx-0.5 px-5 py-3 text-sm border-2 border-gray-900 text-gray-900 shadow rounded-md">
+                            Delete
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
     </div>
 </div>
