--- a/src/app/side-list/side-list.component.html
+++ b/src/app/side-list/side-list.component.html
@@ -41,7 +41,12 @@
             <div class="w-60 m-3 px-3 bg-blue-200 text-blue-800 rounded-lg text-sm">
                 {{si.siteUrl}}
             </div>
-            <button class="my-3 ml-3 mx-0.5 px-5 py-3 text-sm bg-gray-900 text-white shadow rounded-lg">Add New Password</button>
+            <button 
+            routerLink="/password-list"
+            [queryParams]="{siteId:si.id , siteName:si.siteName , siteUrl:si.siteURL ,siteImgUrl:si.siteImgUrl}"
+            class="my-3 ml-3 mx-0.5 px-5 py-3 text-sm bg-gray-900 text-white shadow rounded-lg">
+            Add New Password
+            </button>
             <button (click)="UpdateSite(si.siteName,si.siteUrl,si.siteImgUrl,si.id)" class="my-3 mx-0.5 px-5 py-3 text-sm border-2 border-gray-900 text-gray-900 shadow rounded-lg">
                 Edit
             </button>
