--- a/src/app/password-list/password-list.component.html
+++ b/src/app/password-list/password-list.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container mx-auto my-16">
     <div *ngIf="isMsgShow" class="p-5 my-3 bg-teal-100 text-teal-900">
         {{msgContent}}
@@ -57,10 +58,14 @@
             </thead>
 
             <tbody>
-                <tr class="h-14" *ngFor="let pass of allPasswords | async" >
+                <tr class="h-14" *ngFor="let pass of allPasswords; let i = index" >
                     <td class="border-2 border-gray-900 p-3">{{pass.email}}</td>
                     <td class="border-2 border-gray-900 p-3">{{pass.username}}</td>
-                    <td class="border-2 border-gray-900 p-3">{{pass.password}}</td>
+                    <td class="border-2 border-gray-900 p-3">{{pass.password}}
+                        <button (click)="decryptPassword(pass.password,i)" class="mx-0.5 px-5 py-3 text-sm bg-red-500 text-white shadow rounded-md">
+                            Decrypt
+                        </button>
+                    </td>
                     <td class="border-2 border-gray-900 p-3">
                         <button (click)="editPasswordFild(pass.email,pass.username,pass.password,pass.id)" class="mx-0.5 px-5 py-3 text-sm bg-gray-900 text-white shadow rounded-md">
                             Edit
