--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,37 @@
-<p>login works!</p>
+9<section class="bg-gray-50">
+    <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto h-screen">
+        <div class="m-full border-4 border-gray-900 bg-white rounded-lg shadow mx-w-md">
+            <div class="p-6 space-y-6">
+                <h1 class="text-2xl font-bold text-gray-900">
+                    log in to your account 
+                </h1>
+
+                <div *ngIf="isError" class="p-3 my-3 bg-red-100 text-red-900">
+
+                    Username or Password is Wrong
+
+                </div>
+                <form #f="ngForm" (ngSubmit)="onSubmit(f.value)" class="space-y-6">
+                    <div>
+                        <label class="block mb-2 text-sm font-medium text-gray-900">
+                            Your Email
+                        </label>
+                        <input ngModel type="email" name="email" placeholder="name@company.com"
+                        class="block w-full p-2.5 text-sm bg-gray-50 border-4 border-gray-900 text-gray-900 rounded-lg ">
+                    </div>
+                    <div>
+                        <label class="block mb-2 text-sm font-medium text-gray-900">
+                            Your Password
+                        </label>
+                        <input ngModel type="password" name="password" placeholder="****************"
+                        class="block w-full p-2.5 text-sm bg-gray-50 border-4 border-gray-900 text-gray-900 rounded-lg ">
+                    </div>
+
+                    <button class="w-full text-white bg-gray-800 hover:bg-gray-900 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+                        Sign in
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
