--- a/src/app/side-list/side-list.component.html
+++ b/src/app/side-list/side-list.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div class="container mx-auto my-16">
     <h1 class="text-5xl mt-0  mb-5">Keepass Manager</h1>
     <p class="mb-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla sapiente doloremque quo corrupti ullam blanditiis sit, soluta enim, ab atque assumenda debitis esse sint iure! Possimus ea libero dolorem dolor.</p>
