--- a/src/app/password-list/password-list.component.html
+++ b/src/app/password-list/password-list.component.html
@@ -10,12 +10,12 @@
         
         
         <div class="shadow-lg border-2 border-gray-900">
-            <img src="https://cdn.mos.cms.futurecdn.net/dcHyDicd7tuDEJX75NDoqV.jpeg" alt="">
-            <h3 class="text-xl font-bold p-3">GoDaddy.com</h3>
+            <img [src]="site_ImgUrl" alt="">
+            <h3 class="text-xl font-bold p-3">{{site_Name}}</h3>
             
             <div class="grid grid-cols-3 gap-3 my-1 p-3">
                 <div class="col-span-2 bg-blue-200 text-blue-800 rounded-lg text-sm">
-                    https://goddady.com
+                    {{site_Url}}
                 </div>
             </div>
         </div>
