develop and connect Api

--- a/src/app/password-list/password-list.component.html
+++ b/src/app/password-list/password-list.component.html
@@ -59,18 +59,18 @@
 
             <tbody>
                 <tr class="h-14" *ngFor="let pass of allPasswords; let i = index" >
-                    <td class="border-2 border-gray-900 p-3">{{pass.email}}</td>
-                    <td class="border-2 border-gray-900 p-3">{{pass.username}}</td>
+                    <td class="border-2 border-gray-900 p-3">{{pass.emailId}}</td>
+                    <td class="border-2 border-gray-900 p-3">{{pass.userName}}</td>
                     <td class="border-2 border-gray-900 p-3">{{pass.password}}
                         <button (click)="decryptPassword(pass.password,i)" class="mx-0.5 px-5 py-3 text-sm bg-red-500 text-white shadow rounded-md">
                             Decrypt
                         </button>
                     </td>
                     <td class="border-2 border-gray-900 p-3">
-                        <button (click)="editPasswordFild(pass.email,pass.username,pass.password,pass.id)" class="mx-0.5 px-5 py-3 text-sm bg-gray-900 text-white shadow rounded-md">
+                        <button (click)="editPasswordFild(pass.emailId,pass.userName,pass.password,pass.passwordId)" class="mx-0.5 px-5 py-3 text-sm bg-gray-900 text-white shadow rounded-md">
                             Edit
                         </button>
-                        <button (click)="deletePass(pass.id)"class="mx-0.5 px-5 py-3 text-sm border-2 border-gray-900 text-gray-900 shadow rounded-md">
+                        <button (click)="deletePass(pass.passwordId)"class="mx-0.5 px-5 py-3 text-sm border-2 border-gray-900 text-gray-900 shadow rounded-md">
                             Delete
                         </button>
                     </td>
