--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -3,14 +3,8 @@
         <div class="m-full border-4 border-gray-900 bg-white rounded-lg shadow mx-w-md">
             <div class="p-6 space-y-6">
                 <h1 class="text-2xl font-bold text-gray-900">
-                    log in to your account 
+                    Sign up for free to manage Password. 
                 </h1>
-
-                <div *ngIf="isError" class="p-3 my-3 bg-red-100 text-red-900">
-
-                    Username or Password is Wrong
-
-                </div>
                 <form #f="ngForm" (ngSubmit)="onSubmit(f.value)" class="space-y-6">
                     <div>
                         <label class="block mb-2 text-sm font-medium text-gray-900">
@@ -19,6 +13,15 @@
                         <input ngModel type="email" name="email" placeholder="name@company.com"
                         class="block w-full p-2.5 text-sm bg-gray-50 border-4 border-gray-900 text-gray-900 rounded-lg ">
                     </div>
+
+                    <div>
+                        <label class="block mb-2 text-sm font-medium text-gray-900">
+                            Your Name
+                        </label>
+                        <input ngModel type="text" name="name" placeholder="Ram Ram"
+                        class="block w-full p-2.5 text-sm bg-gray-50 border-4 border-gray-900 text-gray-900 rounded-lg ">
+                    </div>
+
                     <div>
                         <label class="block mb-2 text-sm font-medium text-gray-900">
                             Your Password
@@ -30,12 +33,6 @@
                     <button class="w-full text-white bg-gray-800 hover:bg-gray-900 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
                         Sign in
                     </button>
-
-                    <a routerLink="registration">
-                        sign up
-                    </a>
-
-
                 </form>
             </div>
         </div>
